OpenTelemetric + Logs + ACL
